--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- Versions -->
+    <restAssured.version>2.4.0</restAssured.version>
   </properties>
 
   <dependencyManagement>
@@ -27,6 +29,21 @@
         <artifactId>fest-assert</artifactId>
         <version>1.4</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.9</version>
+      </dependency>
+      <dependency>
+        <groupId>com.jayway.restassured</groupId>
+        <artifactId>rest-assured</artifactId>
+        <version>${restAssured.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.jayway.restassured</groupId>
+        <artifactId>json-path</artifactId>
+        <version>${restAssured.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
