--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+    <!-- twitter connection details -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- Versions -->
     <restAssured.version>2.4.0</restAssured.version>
@@ -18,6 +19,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>me.sbio</groupId>
+        <artifactId>twitterApiClient</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -39,11 +45,23 @@
         <groupId>com.jayway.restassured</groupId>
         <artifactId>rest-assured</artifactId>
         <version>${restAssured.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>com.jayway.restassured</groupId>
         <artifactId>json-path</artifactId>
         <version>${restAssured.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.github.tomakehurst</groupId>
+        <artifactId>wiremock</artifactId>
+        <version>1.41</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.3.2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -62,7 +80,9 @@
   </dependencies>
 
   <modules>
+    <module>twitterApiClient</module>
     <module>readyourtweetsApiContract</module>
+    <module>twitterStubServer</module>
   </modules>
 
 </project>
