--- a/twitterApiClient/pom.xml
+++ b/twitterApiClient/pom.xml
@@ -8,26 +8,21 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>me.sbio</groupId>
-  <artifactId>readyourtweetsApiContract</artifactId>
+  <artifactId>twitterApiClient</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>readyourtweetsApiContract</name>
+  <name>twitterApiClient</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <dependencies>
     <dependency>
-      <groupId>com.jayway.restassured</groupId>
-      <artifactId>rest-assured</artifactId>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.jayway.restassured</groupId>
-      <artifactId>json-path</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>me.sbio</groupId>
-      <artifactId>twitterApiClient</artifactId>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
     </dependency>
   </dependencies>
 </project>
