--- a/twitterStubServer/pom.xml
+++ b/twitterStubServer/pom.xml
@@ -8,22 +8,17 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>me.sbio</groupId>
-  <artifactId>readyourtweetsApiContract</artifactId>
+  <artifactId>twitterStubServer</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>readyourtweetsApiContract</name>
+  <name>twitterStubServer</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <dependencies>
     <dependency>
-      <groupId>com.jayway.restassured</groupId>
-      <artifactId>rest-assured</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.jayway.restassured</groupId>
-      <artifactId>json-path</artifactId>
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock</artifactId>
     </dependency>
     <dependency>
       <groupId>me.sbio</groupId>
