--- a/readyourtweetsApiContract/pom.xml
+++ b/readyourtweetsApiContract/pom.xml
@@ -29,5 +29,40 @@
       <groupId>me.sbio</groupId>
       <artifactId>twitterApiClient</artifactId>
     </dependency>
+    <dependency>
+      <groupId>me.sbio</groupId>
+      <artifactId>twitterStubServer</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>stubMode</id>
+      <properties>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.18.1</version>
+            <configuration>
+              <systemPropertyVariables>
+                <twitter.baseUri>http://localhost</twitter.baseUri>
+                <twitter.port>8888</twitter.port>
+                <twitter.consumerKey>MY_SPECIAL_CONSUMER_KEY</twitter.consumerKey>
+                <twitter.consumerSecret>MY_SPECIAL_CONSUMER_SECRET</twitter.consumerSecret>
+              </systemPropertyVariables>
+              <properties>
+                <property>
+                  <name>listener</name>
+                  <value>me.sbio.readyourtweets.listener.StubServerListener</value>
+                </property>
+              </properties>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
