--- a/twitter-api-client/pom.xml
+++ b/twitter-api-client/pom.xml
@@ -7,22 +7,21 @@
     <groupId>me.sbio</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <groupId>me.sbio</groupId>
-  <artifactId>twitterStubServer</artifactId>
+  <artifactId>twitter-api-client</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>twitterStubServer</name>
+  <name>twitterApiClient</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
     <dependency>
-      <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
     </dependency>
     <dependency>
-      <groupId>me.sbio</groupId>
-      <artifactId>twitterApiClient</artifactId>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
     </dependency>
   </dependencies>
 </project>
