--- a/pom.xml
+++ b/pom.xml
@@ -11,40 +11,49 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <!-- twitter connection details -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- Versions -->
+    <!-- Dependency versions -->
+    <commons-codec.version>1.9</commons-codec.version>
+    <commons-lang3.version>3.3.2</commons-lang3.version>
+    <fest.version>1.4</fest.version>
+    <junit.version>4.11</junit.version>
+    <jstl.version>1.2</jstl.version>
     <restAssured.version>2.4.0</restAssured.version>
+    <servlet-api.version>3.1.0</servlet-api.version>
+    <spring.version>4.1.3.RELEASE</spring.version>
+    <wiremock.version>1.41</wiremock.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
+      <!-- project level dependencies -->
       <dependency>
         <groupId>me.sbio</groupId>
         <artifactId>twitter-api-client</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>me.sbio</groupId>
         <artifactId>twitter-stub-server</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${project.version}</version>
       </dependency>
+      <!-- Test scope dependencies -->
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.11</version>
+        <version>${junit.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.easytesting</groupId>
         <artifactId>fest-assert</artifactId>
-        <version>1.4</version>
+        <version>${fest.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
-        <version>1.9</version>
+        <version>${commons-codec.version}</version>
       </dependency>
       <dependency>
         <groupId>com.jayway.restassured</groupId>
@@ -59,6 +68,13 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${spring.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- 3rd party dependencies -->
+      <dependency>
         <groupId>com.github.tomakehurst</groupId>
         <artifactId>wiremock</artifactId>
         <version>1.41</version>
@@ -67,6 +83,43 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.3.2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <!-- container provided dependencies -->
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${servlet-api.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>${jstl.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
