--- a/twitter-app/pom.xml
+++ b/twitter-app/pom.xml
@@ -10,8 +10,7 @@
   <artifactId>twitter-app</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
-  <name>twitter-app Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <name>twitter-app webapp</name>
 
   <dependencies>
     <dependency>
@@ -37,8 +36,8 @@
       <artifactId>spring-webmvc</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
