--- a/twitter-api-contract/pom.xml
+++ b/twitter-api-contract/pom.xml
@@ -36,7 +36,7 @@
 
   <profiles>
     <profile>
-      <id>stubMode</id>
+      <id>contractStubMode</id>
       <properties>
       </properties>
       <build>
