--- a/twitter-app/pom.xml
+++ b/twitter-app/pom.xml
@@ -56,10 +56,18 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.2.6.v20141205</version>
-        <configuration>
-          <scanIntervalSeconds>0</scanIntervalSeconds>
-        </configuration>
+        <executions>
+          <execution>
+            <id>start-jetty</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>start</goal>
+            </goals>
+            <configuration>
+              <scanIntervalSeconds>0</scanIntervalSeconds>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
