--- a/twitter-commons/pom.xml
+++ b/twitter-commons/pom.xml
@@ -7,21 +7,20 @@
     <groupId>me.sbio</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>twitter-stub-server</artifactId>
+  <artifactId>twitter-commons</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>twitter-stub-server</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
     <dependency>
-      <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
     </dependency>
     <dependency>
-      <groupId>me.sbio</groupId>
-      <artifactId>twitter-commons</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
   </dependencies>
 </project>
