--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,20 @@
     <servlet-api.version>3.1.0</servlet-api.version>
     <spring.version>4.1.3.RELEASE</spring.version>
     <wiremock.version>1.41</wiremock.version>
+
+    <!-- Stub server connection details -->
+    <twitter.stub.baseUri>http://localhost</twitter.stub.baseUri>
+    <twitter.stub.port>8888</twitter.stub.port>
+    <twitter.stub.consumerKey>MY_CONSUMER_KEY</twitter.stub.consumerKey>
+    <twitter.stub.consumerSecret>MY_CONSUMER_SECRET</twitter.stub.consumerSecret>
+
+    <!-- Real connection details -->
+    <consumerKey></consumerKey>
+    <consumerSecret></consumerSecret>
+    <twitter.real.baseUri>https://api.twitter.com</twitter.real.baseUri>
+    <twitter.real.port>443</twitter.real.port>
+    <twitter.real.consumerKey>${consumerKey}</twitter.real.consumerKey>
+    <twitter.real.consumerSecret>${consumerSecret}</twitter.real.consumerSecret>
   </properties>
 
   <dependencyManagement>
@@ -168,7 +182,6 @@
     <module>twitter-api-client</module>
     <module>twitter-stub-server</module>
     <module>twitter-app</module>
-    <module>twitter-app-acceptance</module>
   </modules>
 
   <build>
@@ -184,21 +197,13 @@
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.18.1</version>
         <executions>
           <execution>
             <goals>
               <goal>integration-test</goal>
               <goal>verify</goal>
             </goals>
-            <configuration>
-              <systemProperties>
-                <twitter.baseUri>http://localhost</twitter.baseUri>
-                <twitter.port>8888</twitter.port>
-                <twitter.consumerKey>MY_CONSUMER_KEY</twitter.consumerKey>
-                <twitter.consumerSecret>MY_CONSUMER_SECRET</twitter.consumerSecret>
-              </systemProperties>
-            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -213,19 +218,19 @@
           <systemProperties>
             <systemProperty>
               <name>twitter.baseUri</name>
-              <value>http://localhost</value>
+              <value>${twitter.stub.baseUri}</value>
             </systemProperty>
             <systemProperty>
               <name>twitter.port</name>
-              <value>8888</value>
+              <value>${twitter.stub.port}</value>
             </systemProperty>
             <systemProperty>
               <name>twitter.consumerKey</name>
-              <value>MY_CONSUMER_KEY</value>
+              <value>${twitter.stub.consumerKey}</value>
             </systemProperty>
             <systemProperty>
               <name>twitter.consumerSecret</name>
-              <value>MY_CONSUMER_SECRET</value>
+              <value>${twitter.stub.consumerSecret}</value>
             </systemProperty>
           </systemProperties>
           <webApp>
@@ -238,6 +243,12 @@
   </build>
 
   <profiles>
+    <profile>
+      <id>acceptance</id>
+      <modules>
+        <module>twitter-app-acceptance</module>
+      </modules>
+    </profile>
     <profile>
       <id>contractStubMode</id>
       <modules>
